bizinikiwi/pezframe/support/test/tests/pezpallet_ui/storage_invalid_rename_value.stderr
error: `pub` is not a valid identifier
  --> tests/pezpallet_ui/storage_invalid_rename_value.rs:30:32
   |
30 |     #[pezpallet::storage_prefix = "pub"]
   |                                   ^^^^^
